--- a/upcoming.html
+++ b/upcoming.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FIFA World Cup - 2022</title>
+    <title>Upcoming Match of FIFA World Cup - 2023</title>
+    <!-- favicon -->
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,8 +19,8 @@
 </head>
 
 <body>
+    <!-- header section start -->
     <header>
-        <!-- header section start -->
         <section id="header-container">
             <div class="header-text">
                 <h1>The Greatest show on the earth</h1>
@@ -29,8 +31,9 @@
                 <img src="images/Banner Image.png" alt="">
             </div>
         </section>
-        <!-- header section end -->
     </header>
+    <!-- header section end -->
+    <!-- main section start -->
     <main>
         <section id="match-container">
             <nav>
@@ -135,6 +138,8 @@
         </section>
         <div class="tablet"><a href="#view-all" class="primary-btn">View All</a></div>
     </main>
+    <!-- main section end -->
+    <!-- footer section start -->
     <footer>
         <h2>Goal</h2>
         <hr>
@@ -154,6 +159,7 @@
             <a href="https://www.youtube.com/c/SafiulAlom" target="_blank"><i class="fa-brands fa-youtube"></i></a>
         </div>
     </footer>
+    <!-- footer section start -->
 </body>
 
 </html>
